--- a/index.html
+++ b/index.html
@@ -290,6 +290,6 @@
 <!-- Swiper.js -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="js/main.js"></script>
+<script src="main.js"></script>
 
 </html>
