--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 Ilmu Komputer & Teknologi Informasi Semester 2 Jurusan Teknologi Informasi di Universitas Sumatera Utara. 
                 </p>
             <div class="social-icon">
-                <a href="https://www.linkedin.com/authwall?trk=gf&trkInfo=AQFTFONERTPjKgAAAZUM3GAgbZcLGrk_bDf9cWqwDJcniP5Vzl-P1um34m4P-tFB1PcIHhz7LyI41EdNEMZbnMgUqT9QoKujDkYSvgbQYQw1G2-5dH3B1jMUMFtoQS6lHsWrMyk=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fm-ubay-arashy-supo-sembodo-904963324%3Futm_source%3Dshare%26utm_campaign%3Dshare_via%26utm_content%3Dprofile%26utm_medium%3Dios_app"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/posts/m-ubay-arashy-supo-sembodo-904963324_saya-merasa-terhormat-mendapatkan-sertifikasi-activity-7271714363625881600-Lra4?utm_source=share&utm_medium=member_ios&rcm=ACoAAFIC61QBmqL8V0Vp3cdxvHN3Zyw4W0nzbZo"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/mhdubayarashy?igsh=MTlhY2NmOW9lZTY2Zg%3D%3D&utm_source=qr"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.tiktok.com/@rashyby?_t=ZS-8txBNsle6Nx&_r=1"><i class="fa-brands fa-tiktok"></i></a>
                 <a href="https://wa.me/6282163752227"><i class="fa-brands fa-whatsapp"></i></a>
